@@ -260,6 +260,7 @@ struct fim_options_t fim_options[] = {
 "Will use the specified \\fBdevice\\fP as fim video output device, overriding automatic checks.\n"
 "The available devices depend on the original configuration/compilation options, so you should\n"
 "get the list of available output devices issuing \\fBfim --version\\fP.\n"
+"The \\fBfb\\fP option selects the Linux framebuffer. Presence with option S (like e.g. \\fBfb=S\\fP) makes " FIM_MAN_fB("fim") " a bit more picky: it will not tolerate running in a screen session.\n"
 "The \\fBaa\\fP option can be specified as \\fBaa[" FIM_SYM_DEVOPTS_SEP_STR "{['w'|'W']}]\\fP ; if supplied, " FIM_MAN_fB("'w'") " selects windowed mode, provided aalib is running under X; by default (or with " FIM_MAN_fB("'W'") "), windowed mode is being turned off internally during initialization by unsetting the DISPLAY environment variable.\n"
 #if FIM_WANT_SDL_OPTIONS_STRING 
 "The \\fBsdl\\fP option may be specified as  \\fBsdl" FIM_MAN_iB FIM_SYM_DEVOPTS_SEP_STR "{['w']['m']['r']['h']['W']['M']['R']['H'][width[:height]]['%']}\\fP,"
